Spotify Integration into Covey.Town (#6)
* Add KaraokeArea to TownService

* Fix comments

* Add KaraokeAreaController

* Fix comments

* implementing karaoke area

* more. implementing

* more implem

* testing this yay

* import changes

* basically you can See a karaoke area but clicking on it doesn't do anything lol

* adding a title

* added title field

* rest of modal work

* User authorization endpoints

* added karaoke modal

* added login routes

* Added user credentials endpoint

* Integrating GUI compenents into codebase

* Fixed client credentials endpoint

* changed endpoint path to fit karaoke area

* Fixed some TS issues

* Fix playSong

* add endpoints to frontend

* Adding WebPlayback

* Added WebPlayback functionality

* added streaming scope and pkce flow

* fixed pkce flow

* Add PKCE auth in login page

* Fix linter issues

* Added refresh token

* Integrated Controller with WebPlayback

* Fixed KaraokeAreaController issues

* Fixed issue of player walking out of karaokeArea and not closing player

* Fix linter errors

* Fix lint

---------
