# shared/generated/swagger.json
@@ -166,7 +166,7 @@
 						},
 						"type": "array"
 					},
-					"isPlaying": {
+					"isSongPlaying": {
 						"type": "boolean"
 					},
 					"elapsedTimeSec": {
@@ -177,7 +177,7 @@
 				"required": [
 					"id",
 					"songQueue",
-					"isPlaying",
+					"isSongPlaying",
 					"elapsedTimeSec"
 				],
 				"type": "object",
@@ -562,6 +562,112 @@
 						}
 					}
 				}
+			}
+		},
+		"/towns/authorize": {
+			"get": {
+				"operationId": "SpotifyAuthorize",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "codeChallenge",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "state",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/towns/callback": {
+			"get": {
+				"operationId": "SpotifyCallback",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "codeVerifier",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/towns/{townID}/{karaokeSessionId}/clientCredentials": {
+			"get": {
+				"operationId": "SpotifyClientCredentials",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Invalid values specified",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/InvalidParametersError"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"towns"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "townID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "karaokeSessionId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "header",
+						"name": "X-Session-Token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/towns/{townID}/posterSessionArea": {
